syntax = "proto3";

package node;
option go_package="v1api";

import "drive.proto";

message Volume {
    string id = 1;
    string owner = 2;
    uint64  size = 3;
    string location = 4;
    LocationType locationType = 5;
    Mode mode = 6;
    string type = 7;
    v1api.Health health = 8;
    OperationalStatus status = 9;
}

enum OperationalStatus {
    Operative = 0;
    Inoperative = 1;
    Staging = 2;
    Missing = 3;
    Removing = 4;
    ReadyToRemove = 5;
    FailToRemove = 6;
    Removed = 7;
    Maintenance = 8;
}

enum Mode {
    RAW = 0;
    FS = 1;
}

enum LocationType {
    Drive = 0;
    LVM = 1;
    nVME = 2;
}

enum StorageClass {
    HDD = 0;
    SSD = 1;
    NVMe = 2;
    HDDLVG = 3;
    SSDLVG = 4;
}

message AvailableCapacity {
    int64 size = 1;
    StorageClass  type = 2;
    string location = 3;
}

message VolumeRequest {
}

message VolumeResponse {
    repeated Volume volume = 1;
}

message AvailableCapacityRequest {
}

message AvailableCapacityResponse {
    repeated AvailableCapacity availableCapacity = 1;
}

message CreateLocalVolumeRequest {
    string pvcUUID = 1;
    string capacity = 2;
    string sc = 3;
}

message CreateLocalVolumeResponse {
    string drive = 1;
    bool ok = 2;
}

message DeleteLocalVolumeRequest {
    string drive = 1;
    string pvcUUID = 2;
}

message DeleteLocalVolumeResponse {
    bool ok = 1;
}

service VolumeManager {
    rpc GetLocalVolumes(VolumeRequest) returns (VolumeResponse){};
    rpc GetAvailableCapacity(AvailableCapacityRequest) returns (AvailableCapacityResponse){};
    rpc CreateLocalVolume(CreateLocalVolumeRequest) returns (CreateLocalVolumeResponse){};
    rpc DeleteLocalVolume(DeleteLocalVolumeRequest) returns (DeleteLocalVolumeResponse){};
}